--- a/Transformations/Transformations.vcxproj
+++ b/Transformations/Transformations.vcxproj
@@ -142,10 +142,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="transformations.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Shader.h" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\Textures\minecraft_earth_block.jpg" />
+    <Image Include="minecraft_block.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
