Diffuse and specular maps

--- a/Light/Light.vcxproj
+++ b/Light/Light.vcxproj
@@ -154,6 +154,10 @@
     <None Include="light.frag" />
     <None Include="light.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="container.png" />
+    <Image Include="container_specular.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
