--- a/OpenGL Project/OpenGL Project.vcxproj.filters
+++ b/OpenGL Project/OpenGL Project.vcxproj.filters
@@ -28,4 +28,18 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\skyboxShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\duckShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\duckShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\skyboxShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+  </ItemGroup>
 </Project>
