--- a/OpenGL Project/OpenGL Project.vcxproj
+++ b/OpenGL Project/OpenGL Project.vcxproj
@@ -150,8 +150,10 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\duckShader.frag" />
-    <None Include="Shaders\duckShader.vert" />
+    <None Include="Shaders\astronautShader.frag" />
+    <None Include="Shaders\astronautShader.vert" />
+    <None Include="Shaders\lampShader.frag" />
+    <None Include="Shaders\lampShader.vert" />
     <None Include="Shaders\skyboxShader.frag" />
     <None Include="Shaders\skyboxShader.vert" />
   </ItemGroup>
