--- a/OpenGL Project/OpenGL Project.vcxproj.filters
+++ b/OpenGL Project/OpenGL Project.vcxproj.filters
@@ -32,13 +32,19 @@
     <None Include="Shaders\skyboxShader.vert">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="Shaders\duckShader.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\duckShader.vert">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\skyboxShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\astronautShader.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\astronautShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\lampShader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\lampShader.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
