--- a/OpenGL Project/OpenGL Project.vcxproj
+++ b/OpenGL Project/OpenGL Project.vcxproj
@@ -152,6 +152,9 @@
   <ItemGroup>
     <None Include="Shaders\astronautShader.frag" />
     <None Include="Shaders\astronautShader.vert" />
+    <None Include="Shaders\depthShader.frag" />
+    <None Include="Shaders\depthShader.geom" />
+    <None Include="Shaders\depthShader.vert" />
     <None Include="Shaders\floorShader.frag" />
     <None Include="Shaders\floorShader.vert" />
     <None Include="Shaders\lampShader.frag" />
