--- a/OpenGL Project/OpenGL Project.vcxproj
+++ b/OpenGL Project/OpenGL Project.vcxproj
@@ -154,6 +154,8 @@
   <ItemGroup>
     <None Include="Shaders\astronautShader.frag" />
     <None Include="Shaders\astronautShader.vert" />
+    <None Include="Shaders\bb8Shader.frag" />
+    <None Include="Shaders\bb8Shader.vert" />
     <None Include="Shaders\depthShader.frag" />
     <None Include="Shaders\depthShader.geom" />
     <None Include="Shaders\depthShader.vert" />
