--- a/OpenGL Project/OpenGL Project.vcxproj.filters
+++ b/OpenGL Project/OpenGL Project.vcxproj.filters
@@ -62,5 +62,11 @@
     <None Include="Shaders\depthShader.geom">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\bb8Shader.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\bb8Shader.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
